package vanhortons;

public interface Beverage {

    double getPrice();


}
