package vanhortons.coffees;

import vanhortons.Coffee;

public class Fancy extends Coffee {

    @Override public double getPrice() { return 3.25; }

}
