package vanhortons.coffees;


import vanhortons.Coffee;

public class Regular extends Coffee {

    @Override public double getPrice() { return 2.0; }

}
